2016-09-06  Kirit Saelensminde  <kirit@felspar.com>
 * The fostgres-test testserver can now be given header values to use for all requests.

2016-09-04  Kirit Saelensminde  <kirit@felspar.com>
 fostgres-test only turns `not_implemented` exceptions into 501s if that is the expected response.

2016-09-03  Kirit Saelensminde  <kirit@felspar.com>
 * Add a command for running SQL from a file.
 * Add a language extension mechanism.

2016-08-28  Kirit Saelensminde  <kirit@felspar.com>
 Object PUT support can now have confiugrations for multiple tables.

2016-08-28  Kirit Saelensminde  <kirit@felspar.com>
 Add DELETE support and a scripting language for testing the views.

2016-08-14  Kirit Saelensminde  <kirit@felspar.com>
 Deprecate the old configuration for JSON based PATCH.

2016-07-30  Kirit Saelensminde  <kirit@felspar.com>
 SQL can be run with a list of JSON arguments.

2016-07-29  Kirit Saelensminde  <kirit@felspar.com>
 Add a connection factory function that can read some values from the request.

2016-03-25  Kirit Saelensminde  <kirit@felspar.com>
 Basic implementation of CSJ and JSON options for views that fetch data from the database.

2015-09-23  Kirit Saelensminde  <kirit@felspar.com>
 Added ChangeLog