@@ -1,4 +1,5 @@
 2016-09-06  Kirit Saelensminde  <kirit@felspar.com>
+ * Logging options can be set for fostgres-test.
  * The fostgres-test testserver can now be given header values to use for all requests.
 
 2016-09-04  Kirit Saelensminde  <kirit@felspar.com>
